--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Calculator</h1>
+    <button>Show History</button>
+    <table></table>
     <section>
         <p id="input"></p>
         <p>(</p>
